clear notebooks and add logo

--- a/content/00_geoprocessing.ipynb
+++ b/content/00_geoprocessing.ipynb
@@ -44,7 +44,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:34.733519Z",
+     "iopub.status.busy": "2020-11-03T03:35:34.732848Z",
+     "iopub.status.idle": "2020-11-03T03:35:35.057056Z",
+     "shell.execute_reply": "2020-11-03T03:35:35.057525Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import geopandas as gpd"
@@ -53,7 +60,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:35.688151Z",
+     "iopub.status.busy": "2020-11-03T03:35:35.460833Z",
+     "iopub.status.idle": "2020-11-03T03:35:35.898160Z",
+     "shell.execute_reply": "2020-11-03T03:35:35.898705Z"
+    }
+   },
    "outputs": [],
    "source": [
     "gp = gpd.read_file(\"data/scag_region.gpkg\") # read the geopackage "
@@ -62,7 +76,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:35.906607Z",
+     "iopub.status.busy": "2020-11-03T03:35:35.906008Z",
+     "iopub.status.idle": "2020-11-03T03:35:35.908378Z",
+     "shell.execute_reply": "2020-11-03T03:35:35.908883Z"
+    }
+   },
    "outputs": [],
    "source": [
     "type(gp)"
@@ -71,7 +92,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:35.912299Z",
+     "iopub.status.busy": "2020-11-03T03:35:35.911763Z",
+     "iopub.status.idle": "2020-11-03T03:35:35.914079Z",
+     "shell.execute_reply": "2020-11-03T03:35:35.914583Z"
+    }
+   },
    "outputs": [],
    "source": [
     "gp.columns"
@@ -87,7 +115,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:35.917376Z",
+     "iopub.status.busy": "2020-11-03T03:35:35.916878Z",
+     "iopub.status.idle": "2020-11-03T03:35:35.918429Z",
+     "shell.execute_reply": "2020-11-03T03:35:35.918944Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import fiona"
@@ -96,7 +131,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:35.925352Z",
+     "iopub.status.busy": "2020-11-03T03:35:35.924697Z",
+     "iopub.status.idle": "2020-11-03T03:35:35.926298Z",
+     "shell.execute_reply": "2020-11-03T03:35:35.926812Z"
+    }
+   },
    "outputs": [],
    "source": [
     "layers = fiona.listlayers('data/scag_region.gpkg')"
@@ -105,7 +147,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:35.929957Z",
+     "iopub.status.busy": "2020-11-03T03:35:35.929371Z",
+     "iopub.status.idle": "2020-11-03T03:35:35.931423Z",
+     "shell.execute_reply": "2020-11-03T03:35:35.931943Z"
+    }
+   },
    "outputs": [],
    "source": [
     "layers"
@@ -121,7 +170,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:36.503541Z",
+     "iopub.status.busy": "2020-11-03T03:35:36.219303Z",
+     "iopub.status.idle": "2020-11-03T03:35:36.754557Z",
+     "shell.execute_reply": "2020-11-03T03:35:36.755014Z"
+    }
+   },
    "outputs": [],
    "source": [
     "scag = gpd.read_file(\"data/scag_region.gpkg\", layer=\"tracts\")"
@@ -130,7 +186,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:36.758872Z",
+     "iopub.status.busy": "2020-11-03T03:35:36.758293Z",
+     "iopub.status.idle": "2020-11-03T03:35:36.760860Z",
+     "shell.execute_reply": "2020-11-03T03:35:36.761460Z"
+    }
+   },
    "outputs": [],
    "source": [
     "type(scag)"
@@ -139,7 +202,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:36.772699Z",
+     "iopub.status.busy": "2020-11-03T03:35:36.772191Z",
+     "iopub.status.idle": "2020-11-03T03:35:36.785868Z",
+     "shell.execute_reply": "2020-11-03T03:35:36.786400Z"
+    }
+   },
    "outputs": [],
    "source": [
     "scag.head()"
@@ -148,7 +218,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:36.789523Z",
+     "iopub.status.busy": "2020-11-03T03:35:36.788988Z",
+     "iopub.status.idle": "2020-11-03T03:35:36.791355Z",
+     "shell.execute_reply": "2020-11-03T03:35:36.791715Z"
+    }
+   },
    "outputs": [],
    "source": [
     "scag.shape "
@@ -164,7 +241,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:36.795054Z",
+     "iopub.status.busy": "2020-11-03T03:35:36.794484Z",
+     "iopub.status.idle": "2020-11-03T03:35:36.796779Z",
+     "shell.execute_reply": "2020-11-03T03:35:36.797292Z"
+    }
+   },
    "outputs": [],
    "source": [
     "scag.columns"
@@ -180,7 +264,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:36.801455Z",
+     "iopub.status.busy": "2020-11-03T03:35:36.800962Z",
+     "iopub.status.idle": "2020-11-03T03:35:36.805000Z",
+     "shell.execute_reply": "2020-11-03T03:35:36.805514Z"
+    }
+   },
    "outputs": [],
    "source": [
     "scag.geometry"
@@ -198,7 +289,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:36.808272Z",
+     "iopub.status.busy": "2020-11-03T03:35:36.807806Z",
+     "iopub.status.idle": "2020-11-03T03:35:38.146519Z",
+     "shell.execute_reply": "2020-11-03T03:35:38.146964Z"
+    }
+   },
    "outputs": [],
    "source": [
     "scag.plot()"
@@ -231,7 +329,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:38.231409Z",
+     "iopub.status.busy": "2020-11-03T03:35:38.221332Z",
+     "iopub.status.idle": "2020-11-03T03:35:38.233837Z",
+     "shell.execute_reply": "2020-11-03T03:35:38.234319Z"
+    }
+   },
    "outputs": [],
    "source": [
     "clinics_df = gpd.read_file('data/behavioralHealth.shp')\n",
@@ -241,7 +346,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:38.240335Z",
+     "iopub.status.busy": "2020-11-03T03:35:38.239893Z",
+     "iopub.status.idle": "2020-11-03T03:35:38.245933Z",
+     "shell.execute_reply": "2020-11-03T03:35:38.246425Z"
+    }
+   },
    "outputs": [],
    "source": [
     "clinics_df.head()"
@@ -250,7 +362,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:38.273782Z",
+     "iopub.status.busy": "2020-11-03T03:35:38.271386Z",
+     "iopub.status.idle": "2020-11-03T03:35:38.349444Z",
+     "shell.execute_reply": "2020-11-03T03:35:38.349890Z"
+    }
+   },
    "outputs": [],
    "source": [
     "clinics_df.plot()"
@@ -259,7 +378,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:38.353430Z",
+     "iopub.status.busy": "2020-11-03T03:35:38.353003Z",
+     "iopub.status.idle": "2020-11-03T03:35:38.356368Z",
+     "shell.execute_reply": "2020-11-03T03:35:38.356821Z"
+    }
+   },
    "outputs": [],
    "source": [
     "clinics_df.geometry"
@@ -268,7 +394,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:38.360548Z",
+     "iopub.status.busy": "2020-11-03T03:35:38.360005Z",
+     "iopub.status.idle": "2020-11-03T03:35:38.362285Z",
+     "shell.execute_reply": "2020-11-03T03:35:38.362718Z"
+    }
+   },
    "outputs": [],
    "source": [
     "clinics_df.ADDRESS"
@@ -277,7 +410,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:38.365476Z",
+     "iopub.status.busy": "2020-11-03T03:35:38.364999Z",
+     "iopub.status.idle": "2020-11-03T03:35:38.367195Z",
+     "shell.execute_reply": "2020-11-03T03:35:38.367638Z"
+    }
+   },
    "outputs": [],
    "source": [
     "len(clinics_df.ADDRESS.unique()) # note some clinics have the same address (different types of services provided at same location)"
@@ -306,7 +446,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:38.372623Z",
+     "iopub.status.busy": "2020-11-03T03:35:38.370876Z",
+     "iopub.status.idle": "2020-11-03T03:35:38.586025Z",
+     "shell.execute_reply": "2020-11-03T03:35:38.586496Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rc = scag[scag['geoid'].str.match(\"^06065\")]\n",
@@ -335,7 +482,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:38.599118Z",
+     "iopub.status.busy": "2020-11-03T03:35:38.598494Z",
+     "iopub.status.idle": "2020-11-03T03:35:38.648464Z",
+     "shell.execute_reply": "2020-11-03T03:35:38.647846Z"
+    }
+   },
    "outputs": [],
    "source": [
     "clinics_tracts = gpd.sjoin(clinics_df, rc, op='within')"
@@ -351,7 +505,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:38.661655Z",
+     "iopub.status.busy": "2020-11-03T03:35:38.660786Z",
+     "iopub.status.idle": "2020-11-03T03:35:38.664117Z",
+     "shell.execute_reply": "2020-11-03T03:35:38.664560Z"
+    }
+   },
    "outputs": [],
    "source": [
     "clinics_df.crs"
@@ -360,7 +521,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:38.667963Z",
+     "iopub.status.busy": "2020-11-03T03:35:38.667243Z",
+     "iopub.status.idle": "2020-11-03T03:35:38.670309Z",
+     "shell.execute_reply": "2020-11-03T03:35:38.670791Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rc.crs"
@@ -376,7 +544,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:38.682291Z",
+     "iopub.status.busy": "2020-11-03T03:35:38.681825Z",
+     "iopub.status.idle": "2020-11-03T03:35:38.684058Z",
+     "shell.execute_reply": "2020-11-03T03:35:38.684492Z"
+    }
+   },
    "outputs": [],
    "source": [
     "clinics_tracts"
@@ -392,7 +567,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:38.698755Z",
+     "iopub.status.busy": "2020-11-03T03:35:38.698223Z",
+     "iopub.status.idle": "2020-11-03T03:35:38.916250Z",
+     "shell.execute_reply": "2020-11-03T03:35:38.916819Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rc.plot()"
@@ -408,7 +590,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.011734Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.011281Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.258768Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.259212Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rc.to_crs(clinics_df.crs).plot()"
@@ -424,7 +613,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.261910Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.261495Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.377635Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.378125Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rc = rc.to_crs(clinics_df.crs)"
@@ -433,7 +629,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.381591Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.380995Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.432001Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.432473Z"
+    }
+   },
    "outputs": [],
    "source": [
     "clinics_tracts = gpd.sjoin(clinics_df, rc, op='within')"
@@ -442,7 +645,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.441363Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.440910Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.462116Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.462557Z"
+    }
+   },
    "outputs": [],
    "source": [
     "clinics_tracts"
@@ -467,7 +677,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.468710Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.468206Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.470565Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.471062Z"
+    }
+   },
    "outputs": [],
    "source": [
     "clinics_tracts[['geoid', 'index_right']].groupby('geoid').agg('count')"
@@ -483,7 +700,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.475147Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.474614Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.476760Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.477213Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ct = clinics_tracts[['geoid', 'index_right']].groupby('geoid').agg('count')\n",
@@ -513,7 +737,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.480251Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.479818Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.507193Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.507639Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rc.merge(ct, on='geoid')"
@@ -529,7 +760,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.513429Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.512141Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.543330Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.543779Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rc.merge(ct, on='geoid', how='outer')"
@@ -545,7 +783,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.551206Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.549990Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.582149Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.583265Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rc.merge(ct, on='geoid', how='outer').fillna(0)"
@@ -561,7 +806,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.595093Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.592595Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.600601Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.601077Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rc = rc.merge(ct, on='geoid', how='outer').fillna(0)"
@@ -570,7 +822,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.604240Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.603701Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.605813Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.606321Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rc['index_right'].sum()"
@@ -579,7 +838,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.609130Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.608617Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.610421Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.610855Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rc.rename(columns={'index_right': 'clinics'}, inplace=True)"
@@ -588,7 +854,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.613716Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.613259Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.615406Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.615844Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rc.clinics.sum()"
@@ -597,7 +870,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.618418Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.617919Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.620421Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.620864Z"
+    }
+   },
    "outputs": [],
    "source": [
     "type(rc)"
@@ -617,7 +897,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:39.623375Z",
+     "iopub.status.busy": "2020-11-03T03:35:39.622959Z",
+     "iopub.status.idle": "2020-11-03T03:35:39.624467Z",
+     "shell.execute_reply": "2020-11-03T03:35:39.624910Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/00.py"
@@ -656,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.8"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
