--- a/content/01_geovisualization.ipynb
+++ b/content/01_geovisualization.ipynb
@@ -31,7 +31,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:41.166608Z",
+     "iopub.status.busy": "2020-11-03T03:35:41.166046Z",
+     "iopub.status.idle": "2020-11-03T03:35:42.415253Z",
+     "shell.execute_reply": "2020-11-03T03:35:42.415878Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import mapclassify\n",
@@ -43,7 +50,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:42.915470Z",
+     "iopub.status.busy": "2020-11-03T03:35:42.574249Z",
+     "iopub.status.idle": "2020-11-03T03:35:43.273093Z",
+     "shell.execute_reply": "2020-11-03T03:35:43.273890Z"
+    }
+   },
    "outputs": [],
    "source": [
     "shp_link = 'data/scag_region.gpkg'\n",
@@ -53,7 +67,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:43.277737Z",
+     "iopub.status.busy": "2020-11-03T03:35:43.277175Z",
+     "iopub.status.idle": "2020-11-03T03:35:43.679001Z",
+     "shell.execute_reply": "2020-11-03T03:35:43.679465Z"
+    }
+   },
    "outputs": [],
    "source": [
     "gdf = gdf.to_crs(3857)"
@@ -62,7 +83,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:43.696453Z",
+     "iopub.status.busy": "2020-11-03T03:35:43.695988Z",
+     "iopub.status.idle": "2020-11-03T03:35:44.694280Z",
+     "shell.execute_reply": "2020-11-03T03:35:44.694725Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f, ax = plt.subplots(1, figsize=(12, 8))\n",
@@ -89,7 +117,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:44.697873Z",
+     "iopub.status.busy": "2020-11-03T03:35:44.697448Z",
+     "iopub.status.idle": "2020-11-03T03:35:44.821248Z",
+     "shell.execute_reply": "2020-11-03T03:35:44.821788Z"
+    }
+   },
    "outputs": [],
    "source": [
     "gdf.fillna(gdf.mean(), inplace = True) \n",
@@ -99,7 +134,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:44.839675Z",
+     "iopub.status.busy": "2020-11-03T03:35:44.839184Z",
+     "iopub.status.idle": "2020-11-03T03:35:48.458446Z",
+     "shell.execute_reply": "2020-11-03T03:35:48.458889Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f, ax = plt.subplots(1, figsize=(12, 8))\n",
@@ -112,7 +154,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:48.461621Z",
+     "iopub.status.busy": "2020-11-03T03:35:48.461139Z",
+     "iopub.status.idle": "2020-11-03T03:35:48.462770Z",
+     "shell.execute_reply": "2020-11-03T03:35:48.463213Z"
+    }
+   },
    "outputs": [],
    "source": [
     "hv = gdf['median_home_value']"
@@ -121,7 +170,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:48.465862Z",
+     "iopub.status.busy": "2020-11-03T03:35:48.465423Z",
+     "iopub.status.idle": "2020-11-03T03:35:48.471654Z",
+     "shell.execute_reply": "2020-11-03T03:35:48.472114Z"
+    }
+   },
    "outputs": [],
    "source": [
     "mapclassify.Quantiles(hv, k=5)"
@@ -130,7 +186,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:48.474614Z",
+     "iopub.status.busy": "2020-11-03T03:35:48.474198Z",
+     "iopub.status.idle": "2020-11-03T03:35:48.482383Z",
+     "shell.execute_reply": "2020-11-03T03:35:48.482842Z"
+    }
+   },
    "outputs": [],
    "source": [
     "mapclassify.Quantiles(hv, k=10)"
@@ -139,7 +202,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:48.485627Z",
+     "iopub.status.busy": "2020-11-03T03:35:48.485155Z",
+     "iopub.status.idle": "2020-11-03T03:35:48.492462Z",
+     "shell.execute_reply": "2020-11-03T03:35:48.492953Z"
+    }
+   },
    "outputs": [],
    "source": [
     "q10 = mapclassify.Quantiles(hv, k=10)"
@@ -148,7 +218,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:48.497052Z",
+     "iopub.status.busy": "2020-11-03T03:35:48.496297Z",
+     "iopub.status.idle": "2020-11-03T03:35:48.498470Z",
+     "shell.execute_reply": "2020-11-03T03:35:48.498923Z"
+    }
+   },
    "outputs": [],
    "source": [
     "dir(q10)"
@@ -157,7 +234,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:48.501973Z",
+     "iopub.status.busy": "2020-11-03T03:35:48.501455Z",
+     "iopub.status.idle": "2020-11-03T03:35:48.503653Z",
+     "shell.execute_reply": "2020-11-03T03:35:48.504107Z"
+    }
+   },
    "outputs": [],
    "source": [
     "q10.bins"
@@ -166,7 +250,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:48.506860Z",
+     "iopub.status.busy": "2020-11-03T03:35:48.506402Z",
+     "iopub.status.idle": "2020-11-03T03:35:48.508468Z",
+     "shell.execute_reply": "2020-11-03T03:35:48.508924Z"
+    }
+   },
    "outputs": [],
    "source": [
     "q10.counts"
@@ -175,7 +266,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:48.511730Z",
+     "iopub.status.busy": "2020-11-03T03:35:48.511263Z",
+     "iopub.status.idle": "2020-11-03T03:35:49.864537Z",
+     "shell.execute_reply": "2020-11-03T03:35:49.864992Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fj10 = mapclassify.FisherJenks(hv, k=10)"
@@ -184,7 +282,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:49.868097Z",
+     "iopub.status.busy": "2020-11-03T03:35:49.867640Z",
+     "iopub.status.idle": "2020-11-03T03:35:49.869926Z",
+     "shell.execute_reply": "2020-11-03T03:35:49.870378Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fj10"
@@ -193,7 +298,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:49.873200Z",
+     "iopub.status.busy": "2020-11-03T03:35:49.872685Z",
+     "iopub.status.idle": "2020-11-03T03:35:49.874822Z",
+     "shell.execute_reply": "2020-11-03T03:35:49.875263Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fj10.adcm"
@@ -202,7 +314,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:49.878015Z",
+     "iopub.status.busy": "2020-11-03T03:35:49.877510Z",
+     "iopub.status.idle": "2020-11-03T03:35:49.879739Z",
+     "shell.execute_reply": "2020-11-03T03:35:49.880802Z"
+    }
+   },
    "outputs": [],
    "source": [
     "q10.adcm"
@@ -211,7 +330,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:49.883936Z",
+     "iopub.status.busy": "2020-11-03T03:35:49.883455Z",
+     "iopub.status.idle": "2020-11-03T03:35:49.885100Z",
+     "shell.execute_reply": "2020-11-03T03:35:49.885622Z"
+    }
+   },
    "outputs": [],
    "source": [
     "bins = [100000, 500000, 1000000, 1500000]"
@@ -220,7 +346,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:49.888880Z",
+     "iopub.status.busy": "2020-11-03T03:35:49.888392Z",
+     "iopub.status.idle": "2020-11-03T03:35:49.893596Z",
+     "shell.execute_reply": "2020-11-03T03:35:49.894093Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ud4 = mapclassify.UserDefined(hv, bins=bins)\n",
@@ -237,7 +370,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:49.910013Z",
+     "iopub.status.busy": "2020-11-03T03:35:49.909581Z",
+     "iopub.status.idle": "2020-11-03T03:35:51.220824Z",
+     "shell.execute_reply": "2020-11-03T03:35:51.221279Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f, ax = plt.subplots(1, figsize=(12, 8))\n",
@@ -251,7 +391,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:51.238643Z",
+     "iopub.status.busy": "2020-11-03T03:35:51.238154Z",
+     "iopub.status.idle": "2020-11-03T03:35:52.732946Z",
+     "shell.execute_reply": "2020-11-03T03:35:52.733461Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f, ax = plt.subplots(1, figsize=(12, 8))\n",
@@ -267,7 +414,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:52.750967Z",
+     "iopub.status.busy": "2020-11-03T03:35:52.750533Z",
+     "iopub.status.idle": "2020-11-03T03:35:54.200248Z",
+     "shell.execute_reply": "2020-11-03T03:35:54.200946Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f, ax = plt.subplots(1, figsize=(12, 8))\n",
@@ -283,7 +437,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:54.219133Z",
+     "iopub.status.busy": "2020-11-03T03:35:54.218666Z",
+     "iopub.status.idle": "2020-11-03T03:35:55.579941Z",
+     "shell.execute_reply": "2020-11-03T03:35:55.580468Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f, ax = plt.subplots(1, figsize=(12, 8))\n",
@@ -298,7 +459,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:55.597068Z",
+     "iopub.status.busy": "2020-11-03T03:35:55.596526Z",
+     "iopub.status.idle": "2020-11-03T03:35:57.042334Z",
+     "shell.execute_reply": "2020-11-03T03:35:57.042777Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f, ax = plt.subplots(1, figsize=(12, 8))\n",
@@ -313,7 +481,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:57.047400Z",
+     "iopub.status.busy": "2020-11-03T03:35:57.046849Z",
+     "iopub.status.idle": "2020-11-03T03:35:57.049148Z",
+     "shell.execute_reply": "2020-11-03T03:35:57.049585Z"
+    }
+   },
    "outputs": [],
    "source": [
     "gdf.geoid"
@@ -322,7 +497,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:57.052061Z",
+     "iopub.status.busy": "2020-11-03T03:35:57.051640Z",
+     "iopub.status.idle": "2020-11-03T03:35:57.053415Z",
+     "shell.execute_reply": "2020-11-03T03:35:57.053857Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy"
@@ -331,7 +513,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:57.058391Z",
+     "iopub.status.busy": "2020-11-03T03:35:57.057850Z",
+     "iopub.status.idle": "2020-11-03T03:35:57.059225Z",
+     "shell.execute_reply": "2020-11-03T03:35:57.059694Z"
+    }
+   },
    "outputs": [],
    "source": [
     "counties = set([geoid[:5] for geoid in gdf.geoid])"
@@ -340,7 +529,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:57.063205Z",
+     "iopub.status.busy": "2020-11-03T03:35:57.062693Z",
+     "iopub.status.idle": "2020-11-03T03:35:57.064928Z",
+     "shell.execute_reply": "2020-11-03T03:35:57.065486Z"
+    }
+   },
    "outputs": [],
    "source": [
     "counties"
@@ -349,7 +545,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:57.072254Z",
+     "iopub.status.busy": "2020-11-03T03:35:57.069844Z",
+     "iopub.status.idle": "2020-11-03T03:35:59.335759Z",
+     "shell.execute_reply": "2020-11-03T03:35:59.336203Z"
+    }
+   },
    "outputs": [],
    "source": [
     "for county in counties:\n",
@@ -372,7 +575,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:35:59.339151Z",
+     "iopub.status.busy": "2020-11-03T03:35:59.338728Z",
+     "iopub.status.idle": "2020-11-03T03:36:02.408441Z",
+     "shell.execute_reply": "2020-11-03T03:36:02.408892Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import geoviews as gv\n",
@@ -385,7 +595,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:36:02.424996Z",
+     "iopub.status.busy": "2020-11-03T03:36:02.424476Z",
+     "iopub.status.idle": "2020-11-03T03:36:02.594907Z",
+     "shell.execute_reply": "2020-11-03T03:36:02.594401Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
@@ -397,7 +614,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:36:02.603996Z",
+     "iopub.status.busy": "2020-11-03T03:36:02.603537Z",
+     "iopub.status.idle": "2020-11-03T03:36:03.536189Z",
+     "shell.execute_reply": "2020-11-03T03:36:03.536694Z"
+    }
+   },
    "outputs": [],
    "source": [
     "shp_link = 'data/scag_region.gpkg'\n",
@@ -408,7 +632,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:36:03.539690Z",
+     "iopub.status.busy": "2020-11-03T03:36:03.539238Z",
+     "iopub.status.idle": "2020-11-03T03:36:07.454122Z",
+     "shell.execute_reply": "2020-11-03T03:36:07.454653Z"
+    }
+   },
    "outputs": [],
    "source": [
     "gdf.hvplot()"
@@ -417,7 +648,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:36:07.458442Z",
+     "iopub.status.busy": "2020-11-03T03:36:07.457946Z",
+     "iopub.status.idle": "2020-11-03T03:36:14.695245Z",
+     "shell.execute_reply": "2020-11-03T03:36:14.696447Z"
+    }
+   },
    "outputs": [],
    "source": [
     "gdf.hvplot(geo=True)"
@@ -426,7 +664,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:36:14.701530Z",
+     "iopub.status.busy": "2020-11-03T03:36:14.701041Z",
+     "iopub.status.idle": "2020-11-03T03:36:14.702836Z",
+     "shell.execute_reply": "2020-11-03T03:36:14.703393Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def choro(df, field, scheme='Quantiles', ncolors=5, cmap='Blues',\n",
@@ -445,7 +690,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:36:14.707083Z",
+     "iopub.status.busy": "2020-11-03T03:36:14.706600Z",
+     "iopub.status.idle": "2020-11-03T03:36:22.564906Z",
+     "shell.execute_reply": "2020-11-03T03:36:22.566195Z"
+    }
+   },
    "outputs": [],
    "source": [
     "choro(gdf, 'median_home_value')"
@@ -454,7 +706,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:36:22.569651Z",
+     "iopub.status.busy": "2020-11-03T03:36:22.569132Z",
+     "iopub.status.idle": "2020-11-03T03:36:30.219943Z",
+     "shell.execute_reply": "2020-11-03T03:36:30.220419Z"
+    }
+   },
    "outputs": [],
    "source": [
     "choro(gdf, 'median_home_value', ncolors=9, cmap='Greens')"
@@ -463,7 +722,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:36:30.224231Z",
+     "iopub.status.busy": "2020-11-03T03:36:30.223764Z",
+     "iopub.status.idle": "2020-11-03T03:36:38.693340Z",
+     "shell.execute_reply": "2020-11-03T03:36:38.693807Z"
+    }
+   },
    "outputs": [],
    "source": [
     "(gv.tile_sources.CartoLight * choro(gdf, 'median_home_value', scheme='FisherJenks', ncolors=9, cmap='Greens'))"
@@ -482,7 +748,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-03T03:36:38.697476Z",
+     "iopub.status.busy": "2020-11-03T03:36:38.697002Z",
+     "iopub.status.idle": "2020-11-03T03:36:38.698771Z",
+     "shell.execute_reply": "2020-11-03T03:36:38.699406Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/01.py"
@@ -524,7 +797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.8"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
